deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-jobs
  namespace: default
  labels:
    app: traefik-jobs
spec:
  selector:
    matchLabels:
      app: traefik-jobs
  template:
    metadata:
      labels:
        app: traefik-jobs
    spec:
      serviceAccountName: traefik-job-svc
      containers:
      - name: traefik-jobs
        image: traefik/jobs
        ports:
        - containerPort: 8888
        securityContext:
          privileged: false
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: false
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-jobs-service
  namespace: default
spec:
  selector:
    app: traefik-jobs
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-jobs-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: traefik-jobs-service
            port:
              number: 8888
        path: /
        pathType: Prefix
